test/interaction/Issue3095-visible.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Nat " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue3095-visible.agda:7.13-18: error: [Interaction.CaseSplitError] Cannot split on module parameter x when checking that the expression ? has type Nat" nil)
((last . 3) . (agda2-maybe-goto '("Issue3095-visible.agda" . 101)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
